[package]
name = "reels-rs"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82" }
clearscreen = "3.0.0"
confy = "0.6.1"
dptree = "0.3.0"
futures = "0.3.30"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", version = "1.0.9" }
paris = { version = "1.5.15", features = ["macros", "no_logger"] }
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
teloxide = { version = "0.12.2", features = ["macros", "erased"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal"] }
url = "2.5.0"
which = "6.0.1"
